dataset1235/2025-2/1955397009/users/179888774/executions/1107611404_2383239197.log
== RUN (2025-08-21 12:43:18)
-- CODE: 
import math
distancia_a = float(input("Distância entre você e a primeira árvore: "))
distancia_b = float(input("Distância entre você e a segunda árvore: "))
angulo_y_graus = float(input("Ângulo y entre a e b (em graus): "))

gamma_radianos = math.radians(gamma_graus)

distancia_c = math.sqrt(distancia_a**2 + distancia_b**2 - 2 * distancia_a * distancia_b * math.cos(angulo_y_radianos))
print(f"{distancia_c:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_radianos = math.radians(gamma_graus)
                                  ^^^^^^^^^^^
NameError: name 'gamma_graus' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_radianos = math.radians(gamma_graus)
                                  ^^^^^^^^^^^
NameError: name 'gamma_graus' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_radianos = math.radians(gamma_graus)
                                  ^^^^^^^^^^^
NameError: name 'gamma_graus' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_radianos = math.radians(gamma_graus)
                                  ^^^^^^^^^^^
NameError: name 'gamma_graus' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_radianos = math.radians(gamma_graus)
                                  ^^^^^^^^^^^
NameError: name 'gamma_graus' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_radianos = math.radians(gamma_graus)
                                  ^^^^^^^^^^^
NameError: name 'gamma_graus' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:43:08)
-- CODE: 
imprt math
distancia_a = float(input("Distância entre você e a primeira árvore: "))
distancia_b = float(input("Distância entre você e a segunda árvore: "))
angulo_y_graus = float(input("Ângulo y entre a e b (em graus): "))

gamma_radianos = math.radians(gamma_graus)

distancia_c = math.sqrt(distancia_a**2 + distancia_b**2 - 2 * distancia_a * distancia_b * math.cos(angulo_y_radianos))
print(f"{distancia_c:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    imprt math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    imprt math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    imprt math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    imprt math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    imprt math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    imprt math
          ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:19:21)
-- CODE: 
import math
distancia_a = float(input("Distância entre você e a primeira árvore: "))
distancia_b = float(input("Distância entre você e a segunda árvore: "))
gamma = float(input("Ângulo y entre a e b (em graus): "))

gamma_rad = math.radians(gamma)
c = math.sqrt(distancia_a**2 + distancia_b**2 - 2 * distancia_a * distancia_b * math.cos(gamma_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 12:56:23)
-- CODE: 
import math
distancia_a = float(input("Distância entre você e a primeira árvore: "))
distancia_b = float(input("Distância entre você e a segunda árvore: "))
gamma = float(input("Ângulo y entre a e b (em graus): "))

gamma_rad = math.radians(gamma)
c = math.sqrt(distancia_a**2 + distancia_b**2 - 2 * distancia_a * distancia_b * math.cos(gamma_rad))
print(f"{c:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distância entre você e a primeira árvore: Distância entre você e a segunda árvore: Ângulo y entre a e b (em graus): 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
